--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -27,8 +27,13 @@ stages:
   
     - script: dotnet publish -c $(buildConfiguration) -o $(Build.ArtifactStagingDirectory)
       displayName: Publish Project 
-  
-  
+    
+    - task: Npm@1
+      displayName: Test UI
+      inputs:
+        command: 'custom'
+        workingDir: 'ClientApp'
+        customCommand: 'run test --watch=false'
 
     - task: PublishBuildArtifacts@1
       inputs:
