--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,11 +36,6 @@ stages:
         ArtifactName: $(artifactName)
         publishLocation: 'Container'
 
-# - task: PublishPipelineArtifact@1
-#   inputs:
-#     targetPath: '$(Pipeline.Workspace)'
-#     artifact: 'drop'
-#     publishLocation: 'pipeline'
 
 #Publish it to the Azure App Service
 # - task: AzureWebApp@1
@@ -50,27 +45,27 @@ stages:
 #     appName: $(azureAppServiceName) #App Service's unique name
 #     package: $(Build.ArtifactStagingDirectory)/**/*.zip
 
-# - stage: 'DeployDev'
-#   displayName: 'Deploy to Dev'
-#   variables: 
-#     appName: 'bermtecdev'
-#   jobs:
-#   - deployment: 'Dev'
-#     pool:
-#       name: test
-#     environment: 'Dev'
-#     strategy: 
-#        runOnce:     
-#         deploy:
-#           steps:
-#            - task: AzureRmWebAppDeployment@4
-#              displayName: 'Deploy .NET Code to Azure App Service '
-#              inputs:
-#               ConnectionType: 'AzureRM'
-#               azureSubscription: 'Azure'
-#               appType: 'webApp'
-#               WebAppName: $(appName)
-#               packageForLinux: '$(Agent.BuildDirectory)/$(artifactName)/$(buildConfiguration)/*.zip'
+ - stage: 'DeployDev'
+   displayName: 'Deploy to Dev'
+   variables: 
+     appName: 'bermtecdev'
+   jobs:
+   - deployment: 'Dev'
+     pool:
+       name: test
+     environment: 'Dev'
+     strategy: 
+        runOnce:     
+         deploy:
+           steps:
+            - task: AzureRmWebAppDeployment@4
+              displayName: 'Deploy .NET Code to Azure App Service '
+              inputs:
+               ConnectionType: 'AzureRM'
+               azureSubscription: 'Azure'
+               appType: 'webApp'
+               WebAppName: $(appName)
+               packageForLinux: '$(Agent.BuildDirectory)/$(artifactName)/$(buildConfiguration)/*.zip'
 
           #  - task: Bash@3
           #    displayName: '2nd Bash'
