--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,8 @@ variables:
   azureSPNName: 'SP_Con' 
   azureAppServiceName: 'bermtecdev'
   artifactName: drop
-  appName: 'bermtecdev'
+  appName: 'dotnet-app-dev'
+  appName1: 'dotnet-app-test'
   isMaster: $[eq(variables['Build.SourceBranch'], 'refs/head/master')]
   isDev: $[eq(variables['Build.SourceBranch'], 'refs/head/developCICD')]
   
@@ -90,7 +91,7 @@ stages:
                ConnectionType: 'AzureRM'
                azureSubscription: 'SP_Con'
                appType: 'webAppLinux'
-               WebAppName: $(appName)
+               WebAppName: $(appName1)
                packageForLinux: '$(Agent.BuildDirectory)/$(artifactName)/$(buildConfiguration)/*.zip'
 
           #  - task: Bash@3
