Update azure-pipelines.yml-3.yml for Azure Pipelines

--- a/azure-pipelines.yml-3.yml
+++ b/azure-pipelines.yml-3.yml
@@ -77,7 +77,7 @@ stages:
   condition: and(succeeded(), eq(variables.isMaster, 'true'))
   jobs:
   - deployment: 'DeployWeb'
-    displayname: deploy to web
+    displayName: deploy to web
     pool:
       name: mypool
     environment: 'Test'
