Update aks-pipelines.yml for Azure Pipelines

--- a/aks-pipelines.yml
+++ b/aks-pipelines.yml
@@ -16,7 +16,13 @@ variables:
   repository: 'bermtechACR'
   namespace: 'walmartdev'
   k8sconnection: 'kubewalmartdev'
-  imagePullSecret: 'test'
+  imagePullSecret: '- task: KubernetesManifest@0
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: 'kubewalmartdev'
+    namespace: 'walmartdev'
+    manifests: 'deployment.yaml,service.yml,Ingress.yml'
+    imagePullSecrets: 'test''
 
 stages:
 - stage: 'Build'
