--- a/aks-pipelines.yml
+++ b/aks-pipelines.yml
@@ -77,7 +77,8 @@ stages:
     ConnectionType: 'AzureRM'
     appType: 'webApp'
     WebAppName: 
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: 
+                $(System.DefaultWorkingDirectory)/manifests/deployment.yaml
                 $(System.ArtifactsDirectory)/manifests/Service.yaml
                 $(System.ArtifactsDirectory)/manifests/Ingress.yaml
               imagePullSecrets: |
