--- a/aks-pipelines.yml
+++ b/aks-pipelines.yml
@@ -18,7 +18,6 @@ variables:
   k8sconnection: 'kubewalmartdev'
   imagePullSecret: 'test'
 
-
 stages:
 - stage: 'Build'
   jobs:
@@ -72,13 +71,7 @@ stages:
               action: deploy
               namespace: $(namespace)
               manifests: |
-                $(System.ArtifactsDirectory)/manifests/- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    appType: 'webApp'
-    WebAppName: 
-    packageForLinux: 
-                $(System.DefaultWorkingDirectory)/manifests/deployment.yaml
+                $(System.ArtifactsDirectory)/manifests/deployment.yaml
                 $(System.ArtifactsDirectory)/manifests/Service.yaml
                 $(System.ArtifactsDirectory)/manifests/Ingress.yaml
               imagePullSecrets: |
