--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           # - Each init container must complete successfully before the next one starts.
       containers:
       - name:  walmartpayment-dev
-        image:  azacrshared.azurecr.io/walmartpayment:latest
+        image:  bermtechacr.azurecr.io/bermtechacr:latest
         resources:
           requests:
             cpu:  100m
